added a page on html

--- a/MySkills.html
+++ b/MySkills.html
@@ -72,8 +72,10 @@
                     <p>I am moving legacy code written in php into node.js apps.</p>
                 </li>
                 <li>
-                    <h3>Web Development(HTML, css)</h3>
-                    <p>This Webstite is All HTML and CSS as of right now. I Plan on Adding Javascript soon.</p>
+                    <a href="HTML.html">
+                        <h3>Web Development(HTML, css)</h3>
+                        <p>This Webstite is All HTML and CSS as of right now. I Plan on Adding Javascript soon.</p>
+                    </a>
                 </li>
                 <li>
                     <a href="Git.html">
