--- a/ReactWithSecurity.html
+++ b/ReactWithSecurity.html
@@ -2,16 +2,16 @@
 <html>
 
 <head>
-    <title>Kaydon Stubbs Software Engineer</title>
+    <title>Kaydon Stubbs Skills</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-
+    <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 
 <body>
+
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">Kaydon Stubbs</a>
@@ -27,15 +27,23 @@
                 </li>
             </ul>
         </nav>
+
     </header>
     <main>
-        <br />
         <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
         <h2>LinkedIn: <a href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">Kaydon Stubbs</a>
         </h2>
-        <br />
         <div class="container">
-            <iframe src="Kaydon Stubbs's Resume.pdf" style="width: 95%; "></iframe>
+            <div class="card">
+                <div class="title">Security</div>
+                <p>Currently I am working on a longer term react project. It is an opertunity for me to do more with
+                    react than just a simple web page. It is a voting app. It validates users as voters, maintains
+                    election results and integrity.</p>
+                <p>I will not be showing code for this project. Part of the project is that it will be attacked by
+                    other. I will also be attaking other projects with permision to pentest them. This will help me know
+                    how hacks are performed so I can be better prepared to defend against them.</p>
+            </div>
+            <h1>Have Fun and Program On.</h1>
         </div>
     </main>
     <footer>
