--- a/ConsumeAPI.html
+++ b/ConsumeAPI.html
@@ -5,63 +5,111 @@
     <title>Kaydon Stubbs Skills</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
 
     <header>
-        <div class="nav">
-            <ul>
-                <li><a href="home.html">Home </a></li>
-                <li><a href="MySkills.html">My Skills </a></li>
-                <li><a href="ToLearn.html">Skills I Am Learning </a></li>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Kaydon Stubbs</a>
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="home.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="MySkills.html">My Skills</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="ToLearn.html">Skills I am Learning</a>
+                </li>
             </ul>
-        </div>
+        </nav>
     </header>
     <main>
-        <br>
-        <br>
-        <br>
+
         <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
         <h2>LinkedIn: <a href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">Kaydon Stubbs</a>
         </h2>
-        <div class="card">
-        <p>
-            Consuming an API
-            Breif Summary Of an API:
-            Application Programming Interface. This is the way that data is going to be shared. This can be in the same
-            program or between multiple programs. You can write your own or consume someone else's API. PReviously I
-            have shown how to write a simple REST API but now I will talk about using someone else's API.
+        <div class="container">
+            <h2>Consuming an API</h2>
+            <div class="card bg-secondary">
+                <div class="car-title">
+                    Breif Summary Of an API:
+                </div>
+                <div class="card-text">
+                    Application Programming Interface. This is the way that data is going to be shared. This can be in
+                    the same
+                    program or between multiple programs. You can write your own or consume someone else's API.
+                    Previously I
+                    have shown how to write a simple REST API but now I will talk about using someone else's API.
+                </div>
+            </div>
+            <div class="card bg-secondary">
+                <div class="car-title">
+                    Why would I need to use someone else's API.
+                </div>
+                <div class="card-text">
+                    This is a serious question. WHY WOULD I USE SOMEONE ELSE'S API? Well I think the answer is time and
+                    speed.
+                    You can always try to do everything yourself. You could write what someone else already has or you
+                    can
+                    stand
+                    on the shoulders of giants.
+                </div>
+                <img
+                    src="https://images.pexels.com/photos/3861943/pexels-photo-3861943.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" />
+            </div>
+            <div class="card bg-secondary">
+                <div class="car-title">
+                    Basic how to.
+                </div>
+                <div class="card-text">
+                    Depending on the api you want to use it may have specific rules to follow. BUt the basics are all
+                    the same.
+                    You need a way to ask questions and respond to the api. Normally you will need to send a specific
+                    request
+                    that you want answered and that it can answer. Then it will respond with the answer if it can. If it
+                    can't
+                    you will get an error and hopefully the error will give you information as to why it couldn't give
+                    you an
+                    answer.
+                    For my projects using node.js I use a library called anxious to make the call to the API.
+                    <img style="max-width: 100%;"
+                        src="https://images.pexels.com/photos/577585/pexels-photo-577585.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+                </div>
+            </div>
+            <div class="card bg-secondary">
+                <div class="car-title">
+                    Struggles/ pitfalls.
+                </div>
+                <div class="card-text">
+                    Struggles. Many API’s you have to pay for. Others will put a limit on how often you can access them.
+                    SOme of
+                    them require a secret token to use. I think the hardest thing about them is knowing how to send the
+                    request
+                    and in what form it will respond.
+                    The biggest worry I have is when an API is changed. When the api is changed i can break how your
+                    program
+                    communicates with it. This can happen at any time. Try to think of ways of protecting against this.
+                    What
+                    Kind of telemetry would you use?
+                </div>
+            </div>
+            <div class="card bg-secondary">
+                <div class="car-title">
+                    Summary
+                </div>
+                <div class="card-text">
+                    API’s are meant to be a promise that if you send something in the correct way you will get something
+                    back.
+                    It will save time and probably money.
+                </div>
 
-            Why would I need to use someone else's API.
-            This is a serious question. WHY WOULD I USE SOMEONE ELSE'S API? Well I think the answer is time and speed.
-            You can always try to do everything yourself. You could write what someone else already has or you can stand
-            on the shoulders of giants.
 
-            Basic how to.
-            Depending on the api you want to use it may have specific rules to follow. BUt the basics are all the same.
-            You need a way to ask questions and respond to the api. Normally you will need to send a specific request
-            that you want answered and that it can answer. Then it will respond with the answer if it can. If it can't
-            you will get an error and hopefully the error will give you information as to why it couldn't give you an
-            answer.
-            For my projects using node.js I use a library called anxious to make the call to the API.
-
-            Struggles/ pitfalls.
-            Struggles. Many API’s you have to pay for. Others will put a limit on how often you can access them. SOme of
-            them require a secret token to use. I think the hardest thing about them is knowing how to send the request
-            and in what form it will respond.
-            The biggest worry I have is when an API is changed. When the api is changed i can break how your program
-            communicates with it. This can happen at any time. Try to think of ways of protecting against this. What
-            Kind of telemetry would you use?
-
-            Summary
-            API’s are meant to be a promise that if you send something in the correct way you will get something back.
-            It will save time and probably money.
-
-            Have Fun and Program On.
-        </p>
-        </div>
+            </div>
+            <h1>Have Fun and Program On.</h1>
     </main>
     <footer>
 
