--- a/VisualStudio.html
+++ b/VisualStudio.html
@@ -5,24 +5,29 @@
     <title>Kaydon Stubbs Skills</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
 
     <header>
-        <div class="nav">
-            <ul>
-                <li><a href="home.html">Home </a></li>
-                <li><a href="MySkills.html">My Skills </a></li>
-                <li><a href="ToLearn.html">Skills I Am Learning </a></li>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Kaydon Stubbs</a>
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="home.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="MySkills.html">My Skills</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="ToLearn.html">Skills I am Learning</a>
+                </li>
             </ul>
-        </div>
+        </nav>
     </header>
     <main>
-        <br>
-        <br>
-        <br>
         <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
         <h2>LinkedIn: <a href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">Kaydon Stubbs</a>
         </h2>
@@ -96,19 +101,27 @@
                     So the first thing you need to do is download Visual Studios. To do this go to
                     https://visualstudio.microsoft.com/downloads/
                     And download the community version.
-                    <img src="Pics\Vs download.PNG"/>
+                    <div>
+                    <img style="max-width: 100%;" src="Pics\Vs download.PNG"/>
+                </div>
                     This will take some time and some space because it is a large program because it tries to have
                     everything.
                     Once it is downloaded run Visual Studio and you will be given the option to create a new project. We
                     will
                     create a new project.
-                    <img src="Pics\vsprojectselect.PNG"/>
+                    <div>
+                    <img style="max-width: 100%;" src="Pics\vsprojectselect.PNG"/>
+                </div>
                     Give the project a name. We will give ours as the name demoApp.
-                    <img src="Pics\vsDemoApp.PNG"/>
+                    <div>
+                    <img style="max-width: 100%;" src="Pics\vsDemoApp.PNG"/>
+                </div>
                     We then get to choose a template. You can always choose no template as well. WE will do an mvc
                     template.
                     It will then scaffold the project that you want to use. And you are ready to start programming.
-                    <img src="Pics\vsIDE.PNG"/>
+                    <div>
+                    <img style="max-width: 100%;" src="Pics\vsIDE.PNG"/>
+                </div>
                 </div>
             </div>
             <div class="card">
