cleaned up stories

--- a/MySkills.html
+++ b/MySkills.html
@@ -29,11 +29,11 @@
     </header>
 
     <main>
-        <br/>
+        <br />
         <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
         <h2>LinkedIn: <a href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">Kaydon Stubbs</a>
         </h2>
-        <br/>
+        <br />
         <div class="skills container">
 
             <div class="row">
@@ -58,7 +58,7 @@
                     </div>
                 </div>
             </div>
-            <br/>
+            <br />
             <div class="row">
                 <div class="col-sm-6">
                     <div class="card text-center">
@@ -81,7 +81,7 @@
                     </div>
                 </div>
             </div>
-            <br/>
+            <br />
             <div class="row">
                 <div class="col-sm-6">
                     <div class="card text-center">
@@ -105,7 +105,7 @@
                     </div>
                 </div>
             </div>
-            <br/>
+            <br />
             <div class="row">
                 <div class="col-sm-6">
                     <div class="card text-center">
@@ -130,7 +130,7 @@
                     </div>
                 </div>
             </div>
-            <br/>
+            <br />
             <div class="row">
                 <div class="col-sm-6">
                     <div class="card text-center">
@@ -159,7 +159,7 @@
                     </div>
                 </div>
             </div>
-            <br/>
+            <br />
             <div class="row">
                 <div class="col-sm-6">
                     <div class="card text-center">
@@ -185,7 +185,7 @@
                     </div>
                 </div>
             </div>
-            <br/>
+            <br />
             <div class="row">
                 <div class="col-sm-6">
                     <div class="card text-center">
@@ -212,7 +212,7 @@
                     </div>
                 </div>
             </div>
-            <br/>
+            <br />
             <div class="row">
                 <div class="col-sm-6">
                     <div class="card text-center">
@@ -239,7 +239,7 @@
                     </div>
                 </div>
             </div>
-            <br/>
+            <br />
             <div class="row">
                 <div class="col-sm-6">
                     <div class="card text-center">
@@ -247,7 +247,8 @@
                             <h3>Learn React Framework</h3>
                         </a>
                         <div class="card-body">
-                            <p>One of the skills I feel I have been missing is the react Framework. I have decided to change this.</p>
+                            <p>One of the skills I feel I have been missing is the react Framework. I have decided to
+                                change this.</p>
                         </div>
                     </div>
                 </div>
@@ -262,7 +263,7 @@
                     </div>
                 </div>
             </div>
-            <br/>
+            <br />
             <div class="row">
                 <div class="col-sm-6">
                     <div class="card text-center">
@@ -270,7 +271,9 @@
                             <h3>Security</h3>
                         </a>
                         <div class="card-body">
-                            <p>I am working on a long term project for secure voting. This will have biweekly updates and improvements to the security. I have a group of people that will activly attemp to hack the program. I will then Work to secure it against any known security issues.</p>
+                            <p>I am working on a long term project for secure voting. This will have biweekly updates
+                                and improvements to the security. I have a group of people that will activly attemp to
+                                hack the program. I will then Work to secure it against any known security issues.</p>
                         </div>
                     </div>
                 </div>
@@ -280,12 +283,26 @@
                             <h3>White Hat Hacking</h3>
                         </a>
                         <div class="card-body">
-                            <p>I am practicing my hacking skills so that I will be able to write more secure software.</p>
+                            <p>I am practicing my hacking skills so that I will be able to write more secure software.
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
-            <br/>
+            <br />
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="card text-center">
+                        <a href="Kotlin.html" class="card-header">
+                            <h3>Kotlin</h3>
+                        </a>
+                        <div class="card-body">
+                            <p>Kotlin is a language used to make mobile apps on android.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br />
             <div class="row">
                 <div class="col-sm-6">
                     <div class="card text-center">
@@ -308,7 +325,7 @@
                     </div>
                 </div>
             </div>
-            <br/>
+            <br />
 
             <!-- </div> -->
     </main>
