--- a/TDD.html
+++ b/TDD.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Kaydon Stubbs Skills</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <!-- <link rel="stylesheet" href="style.css"> -->
+    </head>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Kaydon Stubbs</a>
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="home.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="MySkills.html">My Skills</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="ToLearn.html">Skills I am Learning</a>
+                </li>
+            </ul>
+        </nav>
 
-<head>
-    <title>Kaydon Stubbs Skills</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
-</head>
-
+    </header>
 <body>
 
-    <header>
-        <div class="nav">
-            <ul>
-                <li><a href="home.html">Home </a></li>
-                <li><a href="MySkills.html">My Skills </a></li>
-                <li><a href="ToLearn.html">Skills I Am Learning </a></li>
-            </ul>
-        </div>
-    </header>
     <main>
-        <br>
-        <br>
-        <br>
         <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
         <h2>LinkedIn: <a href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">Kaydon Stubbs</a>
         </h2>
+        <div class="container">
         <div class="card">
-            <h1>TDD</h1>
+            <h1 class="card-title">TDD</h1>
             <h2>What is TDD</h2>
             <h3>TDD ruleset</h3>
             <ul>
@@ -44,6 +50,7 @@
             </p>
             <h2>Fast example of TDD.</h2>
             Red green refactor
+            <img src="Pics\redGreenRefactore.png">
 
             <h2>Extra use of TDD</h2>
             <p>It helps you understand existing code or purchased code.
@@ -52,8 +59,12 @@
                 changed you can know if it will break your code when you run the tests.
                 For more resources look to Clean code: A handbook of Agile Software Craftsmanship
             </p>
+            <h2>What is the definition of legacy code?</h2>
+            <p> I have heard it being any code that does not  have tests. 
+                with TDD you do not have legacy code you have robust and maintainable code.
+            </p>
         </div>
-
+    </div>
     </main>
     <footer>
 
