--- a/pythonExperience.html
+++ b/pythonExperience.html
@@ -5,29 +5,40 @@
     <title>Kaydon Stubbs Skills</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 
 <body>
 
     <header>
-        <div class="nav">
-            <ul>
-                <li><a href="home.html">Home </a></li>
-                <li><a href="MySkills.html">My Skills </a></li>
-                <li><a href="ToLearn.html">Skills I Am Learning </a></li>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Kaydon Stubbs</a>
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="home.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="MySkills.html">My Skills</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="ToLearn.html">Skills I am Learning</a>
+                </li>
             </ul>
-        </div>
+        </nav>
+
     </header>
     <main>
-        <br>
-        <br>
-        <br>
         <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
         <h2>LinkedIn: <a href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">Kaydon Stubbs</a>
         </h2>
-        <div class="card"
-        
+        <div class="container"></div>
+        <div class="container">
+            <div class="card">
+                
+            </div>
+        </div>
     </main>
     <footer>
 
