--- a/template.html
+++ b/template.html
@@ -33,7 +33,7 @@
         <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
         <h2>LinkedIn: <a href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">Kaydon Stubbs</a>
         </h2>
-        <div class="card"></div>
+        <div class="container"></div>
     </main>
     <footer>
 
