python write up

--- a/pythonExperience.html
+++ b/pythonExperience.html
@@ -36,7 +36,58 @@
         <div class="container"></div>
         <div class="container">
             <div class="card">
-                
+                <h2 class="card-title text-center">Python the easy language?</h2>
+                <p class="card-body">
+                    Many consider Python to be the easy language. It is a high level language. It is fast to hack
+                    something together and it's eaqsy way to introduce programming to someone new to programing.
+                </p>
+            </div>
+            <div class="card">
+                <h2 class="card-title text-center">I think python is an easy language</h2>
+                <p class="card-body">In geaneral python is easy to learn. It is easy to get something up and running. I
+                    dont know if its what I would suggest to people to learn first as a language.
+                    I think it is better to go from a more strict language to the easier language. For me I went from
+                    c++ and c to python.
+                </p>
+            </div>
+            <div class="card">
+                <h2 class="card-title text-center">Why go from harder to easier?</h2>
+
+                <p class="card-body">I think with the eaze of python you dont need to understand what the program is
+                    doing. You may also not understand why the computer is behaving the way it is. When you learn the
+                    harder language the lower level language you need to understand at a depeer level. You need a
+                    greater understanding of what the computer is doing to write in a lower level language. For some
+                    thisis the benifit of learning python first though. You can quickly see a project come to life. You
+                    can see rapid progress. For those that need to see success early learnign python may be the path to
+                    try. </p>
+            </div>
+            <div class="card">
+                <h2 class="card-title text-center">Struggels I had / have with python</h2>
+                <div class="card-body">For me pythons most anoying characteristic is its use of whitespace. For most of
+                    the languages I use whitespace does not matter. This is not the case with python. spaces are
+                    different from tabs. If you dont indent properly or mix up spaces and tabs the program will not
+                    work.
+                    With modern text editers this is not as much of a concern but it is the number one thing that slows
+                    me down.
+                </div>
+                <div class="card">
+                    <h2 class="card-title text-center">
+                        A simple pitch counter in python
+                    </h2>
+                    <p>To start you need a file ending in .py</p>
+                    <p>To make a function start by writing def then give the function name and any arguments that go
+                        with it. The you need to type a :. This : tells python that the next part of the program should
+                        be the function definition. On the new line make sure you are tabbed in one level. </p>
+                    <img src="Pics\python function def.PNG" class="card-image">
+                    <p> You can make as many functions as you need. The next step is to call the function so that it
+                        will run in the program. To do so outside of any function type the function name with () after
+                        it.</p>
+                    <img src="Pics/pythonfunction.PNG" class="card-image">
+                    <p>To run the program make go to the source of the file and type in the file name.</p> 
+                    <p>My complete program is given here for a pitch counter</p>
+                    <img src="Pics\pythonprogram.PNG" class="card-image">
+                </div>
+                <h2>Have Fun and Program On</h2>
             </div>
         </div>
     </main>
