added to skills page

--- a/MySkills.html
+++ b/MySkills.html
@@ -301,6 +301,16 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-sm-6">
+                    <div class="card text-center">
+                        <a href="ChaosIntoOrder.html" class="card-header">
+                            <h3>Telemetry</h3>
+                        </a>
+                        <div class="card-body">
+                            <p>Telemetry is to measure froma distance. It is a practice used to maintain the health and reliability of your applications.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <br />
             <div class="row">
