--- a/MySkills.html
+++ b/MySkills.html
@@ -307,7 +307,30 @@
                             <h3>Telemetry</h3>
                         </a>
                         <div class="card-body">
-                            <p>Telemetry is to measure froma distance. It is a practice used to maintain the health and reliability of your applications.</p>
+                            <p>Telemetry is to measure from a distance. It is a practice used to maintain the health and reliability of your applications.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br />
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="card text-center">
+                        <a href="LearnLinuxFileTraversal.html" class="card-header">
+                            <h3>Linux traversal</h3>
+                        </a>
+                        <div class="card-body">
+                            <p>I show how to move around in the linux operating system</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="card text-center">
+                        <a href="#" class="card-header">
+                            <h3></h3>
+                        </a>
+                        <div class="card-body">
+                            <p></p>
                         </div>
                     </div>
                 </div>
